--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
 }
 
 
+h2{
+    color: var(--marrom);
+}
+
 /* dropdown menu */
 
 nav{
@@ -60,4 +64,60 @@ display: block;
 .secao-produtos {
     text-align: center;
     font-size: 2em;
+}  
+
+.card-produto {
+    border: 1px solid #333;
+    border-radius: 10px;
+    width: 20%;
+    padding: 20px;
+    font-size: 18px;
+}
+
+.card-produto img {
+    width: 80%;
+}
+
+.container-produtos {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 10px;
+}
+
+/* rodapé */
+
+footer{
+    background-color: var(--ciano);
+    color: var(--ciano-escuro);
+
+}
+
+footer h4{
+    font-size: 22px;
+}
+
+footer a{
+    text-decoration: none;
+    color: var(--ciano-escuro);
+    font-size: 18px;
+}
+
+.footer-info{
+    text-decoration: none;
+    color: var(--ciano-escuro);
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-info-geral{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+.footer-rede-social{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
