--- a/style.css
+++ b/style.css
@@ -221,6 +221,9 @@ button:hover{
 .card{
     width: 100px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+
 }
 
 
@@ -229,7 +232,7 @@ button:hover{
   height: 180px;
   object-fit: contain;
   background-color: white;
-  border: 5px solid var(--areia);
+  border:7px solid var(--areia);
   border-radius: 50%;
   padding: 10px;
   transition: transform 0.3s ease;
