--- a/style.css
+++ b/style.css
@@ -25,24 +25,28 @@ h2{
     font-size: 26;
 }
 
-/* barra nav */
+/* barra nav ciano */
 
 nav{
-    background-color: var(--ciano);
+    background-color: var(--ciano);    
     color: var(--ciano-escuro);
     display: flex;
 }
 
 nav a{
-    text-decoration: none;
+    text-decoration: none;             
     color: var(--ciano-escuro);
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: flex-end;            /*joga para o lado*/
+    align-items: center;                  /*centraliza vertical*/ 
     font-size: 22px;
+    padding: 15px;
+    text-align: center;
 }
+    
 
-.nav-logo{
+
+.nav-logo{                               /*imagem logo*/
 display: flex;
 align-items: center;
 justify-content: space-between;
@@ -50,7 +54,7 @@ padding: 5px 50px 5px 5px;
 }
 
 .nav-conta{
-    text-decoration: none;
+    text-decoration: none;              /*meu carrinho, login, pedidos*/
     color: var(--ciano-escuro);
     background-color: var(--ciano);
     display: flex;
@@ -58,10 +62,6 @@ padding: 5px 50px 5px 5px;
     font-size: 26px;
 }
 
-nav a{
-    padding: 15px;
-    text-align: center;
-}
 
 
 /* dropdown menu */
