--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: serif Georgia, 'Times New Roman', Times, serif;
 }
 
 /*PRODUTOS EM DESTAQUE*/
@@ -222,7 +223,6 @@ button:hover{
     text-align: center;
     display: flex;
     justify-content: center;
-
 }
 
 
@@ -241,14 +241,22 @@ button:hover{
     transform: scale(1.1);
 }
 
+.card a {
+    text-decoration: none;
+}
 
+.card p{
+     padding: 25px;
+     color: var(--preto);
+     font-weight: bold;
+}
 
 /* RODAPÉ */
 
 footer{
     background-color: var(--ciano);
     color: var(--ciano-escuro);
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer h4{
