--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 h2{
     color: var(--marrom);
-    text-align: left;
+    text-align: left;                      /*titulos seções*/
     padding: 20px;
     font-size: 26;
 }
@@ -136,8 +136,8 @@ display: block;
 
     .itens {
     display: flex;
-    flex-wrap: wrap;  /*faz quebra de linha conforme o tamanho da tela*/
-    gap: 60px;     /*espaçamento entre os produtos*/
+    flex-wrap: wrap;                     /*faz quebra de linha conforme o tamanho da tela*/
+    gap: 60px;                          /*espaçamento entre os produtos*/
 }
 
 
@@ -232,7 +232,7 @@ button:hover{
 .card img {
   width: 180px;
   height: 180px;
-  object-fit: contain;                   /*Imagem sem corte ou distorção*/
+  object-fit: contain;                   /*Imagem sem corte e distorção*/
   background-color: white;
   border:7px solid var(--areia);         /*circulo*/
   border-radius: 50%;
@@ -248,7 +248,7 @@ button:hover{
     text-decoration: none;
 }
 
-.card p{
+.card p{                                /*descrição*/
      padding: 25px;
      color: var(--preto);
      font-weight: bold;
@@ -259,7 +259,7 @@ button:hover{
 footer{
     background-color: var(--ciano);
     color: var(--ciano-escuro);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;                    /*fonte*/
 }
 
 footer h4{
@@ -281,10 +281,10 @@ footer a{
 
 .footer-info-geral{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-around;         /*distanciar as divs*/
 }
 
-.footer-rede-social{
+.footer-rede-social{                      /*icones*/
     display: flex;
     justify-content: center;
     padding: 20px;
